# embed_sand

./: .gitignore  .gitmodules  README.md  platformio.ini
remote/: Cargo.toml
remote/src/: main.rs  main_view.rs  network.rs  remote_app.rs
src/: main.cpp  mem.cpp  mem.hpp  remote.cpp  remote.hpp  web_server.cpp  web_server.hpp  wifi.cpp  wifi.hpp
src/data/: data.cpp  data.hpp
