[package]
name = "remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.24.2", features = ["full"] }

test_engine = { path = "deps/test_engine/test_engine" }

ui = { path = "deps/test_engine/deps/ui" }
ui_views = { path = "deps/test_engine/deps/ui/ui_views" }
